# infinity-stack

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
infinity-data/: .gitignore  Cargo.toml  README.md
infinity-data/crates/data-cli/: Cargo.toml
infinity-data/crates/data-cli/src/: main.rs
infinity-data/crates/data-core/: Cargo.toml
infinity-data/crates/data-core/src/: aggregation.rs  error.rs  hnsw.rs  lib.rs  model.rs  password.rs  rbac.rs  security.rs
infinity-data/crates/data-server/: Cargo.toml
infinity-data/crates/data-server/assets/: app.js  index.html  styles.css
infinity-data/crates/data-server/migrations/: 0001_init.sql
infinity-data/crates/data-server/src/: assets.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  ratelimit.rs  state.rs  throttle.rs  util.rs
infinity-data/crates/data-server/src/routes/: admin.rs  audit.rs  auth_routes.rs  collections.rs  mod.rs  tables.rs
infinity-data/crates/data-server/src/store/: mod.rs
infinity-data/crates/data-server/tests/: security.rs
infinity-id/: .env.example  Cargo.toml  Config.toml.example  Dockerfile  Edge.toml.example  LICENSE  README.md  docker-compose.yml
infinity-id/.cargo/: audit.toml
infinity-id/crates/infinity-core/: Cargo.toml
infinity-id/crates/infinity-core/src/: error.rs  keys.rs  lib.rs  mfa.rs  model.rs  password.rs  rbac.rs  token.rs
infinity-id/crates/infinity-edge/: Cargo.toml
infinity-id/crates/infinity-edge/src/: config.rs  jwks.rs  main.rs  ratelimit.rs
infinity-id/crates/infinity-server/: Cargo.toml
infinity-id/crates/infinity-server/assets/: app.js  index.html  styles.css
infinity-id/crates/infinity-server/migrations/: 0001_init.sql  0002_totp_last_step.sql
infinity-id/crates/infinity-server/src/: assets.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  ratelimit.rs  state.rs  throttle.rs  util.rs
infinity-id/crates/infinity-server/src/routes/: audit.rs  auth_routes.rs  clients.rs  keys.rs  mfa.rs  mod.rs  oidc.rs  roles.rs  users.rs
infinity-id/crates/infinity-server/src/store/: mod.rs
infinity-id/crates/infinity-server/tests/: security.rs
infinity-observe/: .gitignore  Cargo.toml  README.md
infinity-observe/crates/observe-agent/: Cargo.toml
infinity-observe/crates/observe-agent/src/: config.rs  main.rs
infinity-observe/crates/observe-core/: Cargo.toml
infinity-observe/crates/observe-core/src/: digest.rs  error.rs  histogram.rs  lib.rs  model.rs  password.rs  rbac.rs
infinity-observe/crates/observe-server/: Cargo.toml
infinity-observe/crates/observe-server/assets/: app.js  index.html  styles.css
infinity-observe/crates/observe-server/migrations/: 0001_init.sql
infinity-observe/crates/observe-server/src/: assets.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  ratelimit.rs  state.rs  throttle.rs
infinity-observe/crates/observe-server/src/routes/: alerts.rs  auth_routes.rs  ingest.rs  keys.rs  mod.rs  query.rs
infinity-observe/crates/observe-server/src/store/: mod.rs
infinity-observe/crates/observe-server/tests/: security.rs
infinity-stream/: .gitignore  Cargo.toml  README.md
infinity-stream/.cargo/: audit.toml
infinity-stream/crates/stream-cli/: Cargo.toml
infinity-stream/crates/stream-cli/src/: main.rs
infinity-stream/crates/stream-core/: Cargo.toml
infinity-stream/crates/stream-core/src/: bm25.rs  commit_log.rs  error.rs  lib.rs  model.rs  password.rs  rbac.rs  security.rs
infinity-stream/crates/stream-server/: Cargo.toml
infinity-stream/crates/stream-server/assets/: app.js  index.html  styles.css
infinity-stream/crates/stream-server/migrations/: 0001_init.sql
infinity-stream/crates/stream-server/src/: auth.rs  config.rs  error.rs  main.rs  ratelimit.rs  state.rs  throttle.rs  util.rs
infinity-stream/crates/stream-server/src/routes/: auth_routes.rs  keys.rs  mod.rs  search.rs  stats.rs  topics.rs
infinity-stream/crates/stream-server/src/store/: mod.rs
