[workspace]
resolver = "2"
members = [
    "crates/infinity-core",
    "crates/infinity-server",
    "crates/infinity-edge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Infinity Stack"]
repository = "https://example.com/infinity-stack"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "set-header"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
argon2 = "0.5"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
governor = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rand = "0.8"
base64 = "0.22"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
figment = { version = "0.10", features = ["toml", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
