[package]
name = "data-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "data_server"
path = "src/lib.rs"

[[bin]]
name = "infinity-data"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
data-core = { path = "../data-core" }
figment.workspace = true
mime_guess.workspace = true
rand.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
base64.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
