[package]
name = "infinity-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
totp-rs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
