[package]
name = "infinity-edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "infinity-edge"
path = "src/main.rs"

[dependencies]
infinity-core = { path = "../infinity-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
