[package]
name = "infinity-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "infinity-id"
path = "src/main.rs"

[dependencies]
infinity-core = { path = "../infinity-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
figment = { workspace = true }
