[package]
name = "observe-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "infinity-observe"
path = "src/main.rs"

[dependencies]
observe-core = { path = "../observe-core" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
figment.workspace = true
mime_guess.workspace = true
rand.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
# axum 0.7's Router implements the `tower` 0.5 `Service` trait directly (not
# the workspace-pinned 0.4), so pin the dev-only `tower` used for
# `ServiceExt::oneshot` in tests to match.
tower = { version = "0.5", features = ["util"] }
