[package]
name = "stream-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "infinity-stream-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
